mabger-meter/force-app/main/default/objects/Account/fields/Account_Cadence__c.field-meta.xml
<CustomField>
    <fullName>Account_Cadence__c</fullName>
    <label>Account Cadence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Auto - AW</fullName>
            </value>
            <value>
                <fullName>No Auto - PMO</fullName>
            </value>
            <value>
                <fullName>No Auto - Cust PO Req.</fullName>
            </value>
            <value>
                <fullName>No Auto - BMDLA</fullName>
            </value>
            <value>
                <fullName>No Auto - BME</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>