mabger-meter/force-app/main/default/objects/Account/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <formula>Id</formula>
    <label>Account ID</label>
    <type>Text</type>
</CustomField>