mabger-meter/force-app/main/default/objects/Account/fields/Account_Owner_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Full_Name__c</fullName>
    <formula>Owner.FirstName  + &apos; &apos; +  Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Full Name</label>
    <type>Text</type>
</CustomField>