mabger-meter/force-app/main/default/objects/Account/fields/Account_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_ID__c</fullName>
    <description>this field holds the user id of the account owner</description>
    <formula>Owner.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>this field holds the user id of the account owner</inlineHelpText>
    <label>Account Owner ID</label>
    <type>Text</type>
</CustomField>