mabger-meter/force-app/main/default/objects/Account/fields/Account_Owner_s_Queue__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_s_Queue__c</fullName>
    <label>Account Owner&apos;s Queue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>