mabger-meter/force-app/main/default/objects/Account/fields/Account_Population__c.field-meta.xml
<CustomField>
    <fullName>Account_Population__c</fullName>
    <label>Account Population</label>
    <length>10</length>
    <type>Text</type>
</CustomField>