mabger-meter/force-app/main/default/objects/Account/fields/Account_Queue_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Queue_Email__c</fullName>
    <label>Account Queue Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>