mabger-meter/force-app/main/default/objects/Account/fields/Account_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_State_Code__c</fullName>
    <formula>CASE(BillingState,
&quot;Alaska&quot;, &quot;AK&quot;,
&quot;Alabama&quot;, &quot;AL&quot;,
&quot;Arkansas&quot;, &quot;AR&quot;,
&quot;Arizona&quot;, &quot;AZ&quot;,
&quot;California&quot;, &quot;CA&quot;,
&quot;Colorado&quot;, &quot;CO&quot;,
&quot;Connecticut&quot;, &quot;CT&quot;,
&quot;Delaware&quot;, &quot;DE&quot;,
&quot;Florida&quot;, &quot;FL&quot;,
&quot;Georgia&quot;, &quot;GA&quot;,
&quot;Hawaii&quot;, &quot;HI&quot;,
&quot;Iowa&quot;, &quot;IA&quot;,
&quot;Idaho&quot;, &quot;ID&quot;,
&quot;Illinois&quot;, &quot;IL&quot;,
&quot;Indiana&quot;, &quot;IN&quot;,
&quot;Kansas&quot;, &quot;KS&quot;,
&quot;Kentucky&quot;, &quot;KY&quot;,
&quot;Louisiana&quot;, &quot;LA&quot;,
&quot;Massachusetts&quot;, &quot;MA&quot;,
&quot;Maryland&quot;, &quot;MD&quot;,
&quot;Maine&quot;, &quot;ME&quot;,
&quot;Michigan&quot;, &quot;MI&quot;,
&quot;Minnesota&quot;, &quot;MN&quot;,
&quot;Missouri&quot;, &quot;MO&quot;,
&quot;Mississippi&quot;, &quot;MS&quot;,
&quot;Montana&quot;, &quot;MT&quot;,
&quot;North Carolina&quot;, &quot;NC&quot;,
&quot;North Dakota&quot;, &quot;ND&quot;,
&quot;Nebraska&quot;, &quot;NE&quot;,
&quot;New Hampshire&quot;, &quot;NH&quot;,
&quot;New Jersey&quot;, &quot;NJ&quot;,
&quot;New Mexico&quot;, &quot;NM&quot;,
&quot;Nevada&quot;, &quot;NV&quot;,
&quot;New York&quot;, &quot;NY&quot;,
&quot;Ohio&quot;, &quot;OH&quot;,
&quot;Oklahoma&quot;, &quot;OK&quot;,
&quot;Oregon&quot;, &quot;OR&quot;,
&quot;Pennsylvania&quot;, &quot;PA&quot;,
&quot;Rhode Island&quot;, &quot;RI&quot;,
&quot;South Carolina&quot;, &quot;SC&quot;,
&quot;South Dakota&quot;, &quot;SD&quot;,
&quot;Tennessee&quot;, &quot;TN&quot;,
&quot;Texas&quot;, &quot;TX&quot;,
&quot;Utah&quot;, &quot;UT&quot;,
&quot;Virginia&quot;, &quot;VA&quot;,
&quot;Vermont&quot;, &quot;VT&quot;,
&quot;Washington&quot;, &quot;WA&quot;,
&quot;Wisconsin&quot;, &quot;WI&quot;,
&quot;West Virginia&quot;, &quot;WV&quot;,
&quot;Wyoming&quot;, &quot;WY&quot;,
&quot;District of Columbia&quot;, &quot;DC&quot;,
&quot;American Samoa&quot;, &quot;AS&quot;,
&quot;Guam&quot;, &quot;GU&quot;,
&quot;Northern Mariana Islands&quot;, &quot;MP&quot;,
&quot;Puerto Rico&quot;, &quot;PR&quot;,
&quot;U.S. Virgin Islands&quot;, &quot;VI&quot;,
&quot;United States Minor Outlying Islands&quot;, &quot;UM&quot;,
&quot;Armed Forces Americas&quot;, &quot;AA&quot;,
&quot;Armed Forces Europe&quot;, &quot;AE&quot;,
&quot;Armed Forces Canada&quot;, &quot;AE&quot;,
&quot;Armed Forces Middle East&quot;, &quot;AE&quot;,
&quot;Armed Forces Africa&quot;, &quot;AE&quot;,
&quot;Armed Forces Pacific&quot;, &quot;AP&quot;,
BillingState)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account State Code</label>
    <type>Text</type>
</CustomField>