mabger-meter/force-app/main/default/objects/Account/fields/Account_URL__c.field-meta.xml
<CustomField>
    <fullName>Account_URL__c</fullName>
    <formula>&quot;https://na123.salesforce.com/&quot; &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account URL</label>
    <type>Text</type>
</CustomField>