mabger-meter/force-app/main/default/objects/Account/fields/Acknowledgment__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgment__c</fullName>
    <description>Setting for the timing of the generation of the external customer acknowledgment.</description>
    <inlineHelpText>None - no external acknowledgment generated.
Immediately - external acknowledgment generated upon customer order creation or PPOC
Verified - external acknowledgment generated after verification; i.e. will be generated using the current previous day run.</inlineHelpText>
    <label>Acknowledgment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Immediately</fullName>
                <default>true</default>
                <label>Immediately</label>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>