mabger-meter/force-app/main/default/objects/Account/fields/Active_Pilot__c.field-meta.xml
<CustomField>
    <fullName>Active_Pilot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pilot Opportunity for prospects evaluating cellular endpoint technology</description>
    <label>Active Pilot</label>
    <type>Checkbox</type>
</CustomField>