mabger-meter/force-app/main/default/objects/Account/fields/Actively_Serviced_Assets__c.field-meta.xml
<CustomField>
    <fullName>Actively_Serviced_Assets__c</fullName>
    <label>Actively Serviced Assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>