mabger-meter/force-app/main/default/objects/Account/fields/Annual_CSAT_Survey_Sent__c.field-meta.xml
<CustomField>
    <fullName>Annual_CSAT_Survey_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Annual CSAT Survey Sent</label>
    <type>Checkbox</type>
</CustomField>