mabger-meter/force-app/main/default/objects/Account/fields/Annual_CSAT_Survey_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Annual_CSAT_Survey_Sent_Date__c</fullName>
    <label>Annual CSAT Survey Sent Date</label>
    <type>Date</type>
</CustomField>