mabger-meter/force-app/main/default/objects/Account/fields/authorized_market__c.field-meta.xml
<CustomField>
    <fullName>authorized_market__c</fullName>
    <label>Authorized Market</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture Irrigation</fullName>
            </value>
            <value>
                <fullName>Chem &amp; Petrochem</fullName>
            </value>
            <value>
                <fullName>Concrete Finishing</fullName>
            </value>
            <value>
                <fullName>Concrete Production</fullName>
            </value>
            <value>
                <fullName>Energy Generation</fullName>
            </value>
            <value>
                <fullName>HVAC &amp; Sustainability</fullName>
            </value>
            <value>
                <fullName>Municipal Utility</fullName>
            </value>
            <value>
                <fullName>Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Process-Valve</fullName>
            </value>
            <value>
                <fullName>Semiconductor</fullName>
            </value>
            <value>
                <fullName>Test &amp; Measurement</fullName>
            </value>
            <value>
                <fullName>Turf Irrigation</fullName>
            </value>
            <value>
                <fullName>Water / Wastewater</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>