mabger-meter/force-app/main/default/objects/Account/fields/BEACON__c.field-meta.xml
<CustomField>
    <fullName>BEACON__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BEACON</label>
    <type>Checkbox</type>
</CustomField>