mabger-meter/force-app/main/default/objects/Account/fields/BEACON_Consumption_Model__c.field-meta.xml
<CustomField>
    <fullName>BEACON_Consumption_Model__c</fullName>
    <inlineHelpText>VISIBLE will be used until the Integration is complete, at that time the training group will change to STANDARD</inlineHelpText>
    <label>Consumption Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Visible</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Discontinued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>