mabger-meter/force-app/main/default/objects/Account/fields/BEACON_Consumption_Model_Last_Edit_Date__c.field-meta.xml
<CustomField>
    <fullName>BEACON_Consumption_Model_Last_Edit_Date__c</fullName>
    <label>Consumption Model Last Edited</label>
    <type>Date</type>
</CustomField>