mabger-meter/force-app/main/default/objects/Account/fields/BEACON_Customer_PO__c.field-meta.xml
<CustomField>
    <fullName>BEACON_Customer_PO__c</fullName>
    <label>Customer PO#</label>
    <length>30</length>
    <type>Text</type>
</CustomField>