mabger-meter/force-app/main/default/objects/Account/fields/BEACON_Customer_PO_Expiration__c.field-meta.xml
<CustomField>
    <fullName>BEACON_Customer_PO_Expiration__c</fullName>
    <label>PO Expires</label>
    <type>Date</type>
</CustomField>