mabger-meter/force-app/main/default/objects/Account/fields/BEACON_Engagement_PO__c.field-meta.xml
<CustomField>
    <fullName>BEACON_Engagement_PO__c</fullName>
    <inlineHelpText>For quoting purposes apply 1/1/2030</inlineHelpText>
    <label>Engagement PO</label>
    <type>Date</type>
</CustomField>