mabger-meter/force-app/main/default/objects/Account/fields/BEACON_Intellichief__c.field-meta.xml
<CustomField>
    <fullName>BEACON_Intellichief__c</fullName>
    <formula>HYPERLINK(&quot;http://MILDOCLIB01:6080/intellichief/servlet/WTServlet?szAction=SCH&amp;DPP=Consumption%20Files&amp;Customer%20Number=&quot; &amp;Customer_Number__c,&quot;Click for INTELLICHIEF&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intellichief Consumption Reports</label>
    <type>Text</type>
</CustomField>