mabger-meter/force-app/main/default/objects/Account/fields/BEACON_Invoice_Month__c.field-meta.xml
<CustomField>
    <fullName>BEACON_Invoice_Month__c</fullName>
    <inlineHelpText>To be used only if a budget restriction requires the primary invoice to occur in a given month.  This is NOT the annual budget.</inlineHelpText>
    <label>Invoice Month</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>January</fullName>
            </value>
            <value>
                <fullName>February</fullName>
            </value>
            <value>
                <fullName>March</fullName>
            </value>
            <value>
                <fullName>April</fullName>
            </value>
            <value>
                <fullName>May</fullName>
            </value>
            <value>
                <fullName>June</fullName>
            </value>
            <value>
                <fullName>July</fullName>
            </value>
            <value>
                <fullName>August</fullName>
            </value>
            <value>
                <fullName>September</fullName>
            </value>
            <value>
                <fullName>October</fullName>
            </value>
            <value>
                <fullName>November</fullName>
            </value>
            <value>
                <fullName>December</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>