mabger-meter/force-app/main/default/objects/Account/fields/BEACON_Invoice_Notes__c.field-meta.xml
<CustomField>
    <fullName>BEACON_Invoice_Notes__c</fullName>
    <inlineHelpText>Format:   SALES CREDIT # XXXXXX, INVOICE FOR BEACON SERVICES, PRIMARY CONTACT is NAME &amp; e-mail.
THIS PRINTS ON EVERY BEACON INVOICE!</inlineHelpText>
    <label>External Invoice Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>