mabger-meter/force-app/main/default/objects/Account/fields/BEACON_Loyalty_System__c.field-meta.xml
<CustomField>
    <fullName>BEACON_Loyalty_System__c</fullName>
    <inlineHelpText>All accounts were pre-populated if they had a Connect or ReadCenter system.</inlineHelpText>
    <label>Loyalty System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CONNECT</fullName>
            </value>
            <value>
                <fullName>MVRS</fullName>
            </value>
            <value>
                <fullName>RC</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>