mabger-meter/force-app/main/default/objects/Account/fields/BEACON_Notes__c.field-meta.xml
<CustomField>
    <fullName>BEACON_Notes__c</fullName>
    <inlineHelpText>For internal Use ONLY</inlineHelpText>
    <label>Internal BEACON Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>