mabger-meter/force-app/main/default/objects/Account/fields/BEACON_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>BEACON_Payment_Status__c</fullName>
    <inlineHelpText>Credit Access Only</inlineHelpText>
    <label>BEACON Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>+30 Days Past Due</fullName>
            </value>
            <value>
                <fullName>+60 Days Past Due</fullName>
            </value>
            <value>
                <fullName>+90 Days Past Due</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>