mabger-meter/force-app/main/default/objects/Account/fields/BEACON_Paytrace_URL__c.field-meta.xml
<CustomField>
    <fullName>BEACON_Paytrace_URL__c</fullName>
    <formula>HYPERLINK(&quot;https://paytrace.com/login.pay&quot;,&quot;Click for PAYTRACE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PAYTRACE</label>
    <type>Text</type>
</CustomField>