mabger-meter/force-app/main/default/objects/Account/fields/BEACON_Portfolio_Created__c.field-meta.xml
<CustomField>
    <fullName>BEACON_Portfolio_Created__c</fullName>
    <inlineHelpText>Actual Date BEACON portfolio generated and Admin passwords provided.  
For reporting purposes 1-1-2030 maybe used if we have a BEACON opportunity.</inlineHelpText>
    <label>Portfolio Created</label>
    <type>Date</type>
</CustomField>