mabger-meter/force-app/main/default/objects/Account/fields/BEACON_Ready_for_Invoice__c.field-meta.xml
<CustomField>
    <fullName>BEACON_Ready_for_Invoice__c</fullName>
    <inlineHelpText>Identifies when initial training is completed, to be completed by the training group</inlineHelpText>
    <label>Ready for Invoice</label>
    <type>Date</type>
</CustomField>