mabger-meter/force-app/main/default/objects/Account/fields/BEACON_Starter_Kit__c.field-meta.xml
<CustomField>
    <fullName>BEACON_Starter_Kit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BEACON Starter Kit</label>
    <type>Checkbox</type>
</CustomField>