mabger-meter/force-app/main/default/objects/Account/fields/BEACON_Subsidiary_Account__c.field-meta.xml
<CustomField>
    <fullName>BEACON_Subsidiary_Account__c</fullName>
    <inlineHelpText>Identifies when an invoice is being generated by Badger Meter but is printed on our subsidiary&apos;s invoice template.  Many accounts are through our subsidiaries but will not require this.   EXCEPTION ONLY.</inlineHelpText>
    <label>Subsidiary Account</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BMDLA</fullName>
            </value>
            <value>
                <fullName>BME</fullName>
            </value>
            <value>
                <fullName>NMAI</fullName>
            </value>
            <value>
                <fullName>UU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>