mabger-meter/force-app/main/default/objects/Account/fields/BigMachines__Partner_Organization__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Partner_Organization__c</fullName>
    <label>Oracle CPQ Cloud Partner Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>