mabger-meter/force-app/main/default/objects/Account/fields/Bill_to_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Country_Code__c</fullName>
    <description>Bill-to Country Code from LX Customer Master RCM - CCOUN</description>
    <label>Bill-to Country Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>