mabger-meter/force-app/main/default/objects/Account/fields/Billing_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Billing_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Builds relationship between Direct End Customer record type and Billing Vendor record type.</description>
    <inlineHelpText>Use to lookup a billing vendor account that this account is currently using.</inlineHelpText>
    <label>Billing Vendor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Billing Vendor</value>
        </filterItems>
        <infoMessage>Search for the Billing Vendor that this customer is currently using.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billing Vendors</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>