mabger-meter/force-app/main/default/objects/Account/fields/Case_Contact_Email_to_Quote__c.field-meta.xml
<CustomField>
    <fullName>Case_Contact_Email_to_Quote__c</fullName>
    <label>Case Contact Email to Quote</label>
    <type>Email</type>
</CustomField>