mabger-meter/force-app/main/default/objects/Account/fields/Case_for_Quote__c.field-meta.xml
<CustomField>
    <fullName>Case_for_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field temporarily holds the ID of a case that needs to be associated with a quote, when creating a quote from a case. Please note that this field should not be used for any other purpose and that the value is only intended as being held temporarily. Do not use on a page layout, with the exception of testing purposes.</description>
    <inlineHelpText>This field temporarily holds the ID of a case that needs to be associated with a quote, when creating a quote from a case. Please note that this field should not be used for any other purpose and that the value is only intended as being held temporarily.</inlineHelpText>
    <label>Case for Quote</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>