mabger-meter/force-app/main/default/objects/Account/fields/CaseNum_to_Quote__c.field-meta.xml
<CustomField>
    <fullName>CaseNum_to_Quote__c</fullName>
    <label>CaseNum to Quote</label>
    <length>80</length>
    <type>Text</type>
</CustomField>