mabger-meter/force-app/main/default/objects/Account/fields/Champion_Reference__c.field-meta.xml
<CustomField>
    <fullName>Champion_Reference__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If box is checked, this account is a champion reference.</inlineHelpText>
    <label>Champion Reference</label>
    <type>Checkbox</type>
</CustomField>