mabger-meter/force-app/main/default/objects/Account/fields/Channel_Type__c.field-meta.xml
<CustomField>
    <fullName>Channel_Type__c</fullName>
    <label>Channel Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bid</fullName>
            </value>
            <value>
                <fullName>Negotiate</fullName>
            </value>
            <value>
                <fullName>Price Book</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>