mabger-meter/force-app/main/default/objects/Account/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <formula>IF( Default_Ship_To_Sales_Credit__c = &quot;008483&quot;, 0.1, 
IF( Default_Ship_To_Sales_Credit__c = &quot;007404&quot;, 0.1, 
0 
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>