mabger-meter/force-app/main/default/objects/Account/fields/Company_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_Number__c</fullName>
    <description>Represents the LX Company Number
10 - US
14 - Europe
28 - BM UK</description>
    <inlineHelpText>Represents the LX Company Number
10 - US
14 - Europe
28 - BM UK</inlineHelpText>
    <label>Company Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10 - BADGER METER, INC. (US)</fullName>
            </value>
            <value>
                <fullName>14 - BADGER METER EUROPA GmbH (Germany)</fullName>
            </value>
            <value>
                <fullName>28 - BADGER METER UK, LTD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>