mabger-meter/force-app/main/default/objects/Account/fields/Competitive_Account__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Competitive Account</label>
    <type>Checkbox</type>
</CustomField>