mabger-meter/force-app/main/default/objects/Account/fields/Coverage_Note2__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Note2__c</fullName>
    <description>Field is added to improve the efficiency of the order entry process and increase visibility to the sales team,</description>
    <label>Coverage Note2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>