mabger-meter/force-app/main/default/objects/Account/fields/Coverage_Note__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Note__c</fullName>
    <label>Coverage Note</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>