mabger-meter/force-app/main/default/objects/Account/fields/Credit_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Credit_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Credit Analyst</description>
    <inlineHelpText>Credit person responsible for the Account</inlineHelpText>
    <label>Credit Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>