mabger-meter/force-app/main/default/objects/Account/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <externalId>true</externalId>
    <label>Customer Number</label>
    <length>8</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>