mabger-meter/force-app/main/default/objects/Account/fields/Customer_Registration_Country__c.field-meta.xml
<CustomField>
    <fullName>Customer_Registration_Country__c</fullName>
    <defaultValue>&quot; &quot;</defaultValue>
    <description>Customer Registration Country for Europe Migration</description>
    <label>Customer Registration Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AT - Austria</fullName>
            </value>
            <value>
                <fullName>BE - Belgium</fullName>
            </value>
            <value>
                <fullName>BG - Bulgaria</fullName>
            </value>
            <value>
                <fullName>CY - Cyprus</fullName>
            </value>
            <value>
                <fullName>CZ - Czech Republic</fullName>
            </value>
            <value>
                <fullName>DE - Germany</fullName>
            </value>
            <value>
                <fullName>DK - Denmark</fullName>
            </value>
            <value>
                <fullName>EE - Estonia</fullName>
            </value>
            <value>
                <fullName>EL - Greece</fullName>
            </value>
            <value>
                <fullName>ES - Spain</fullName>
            </value>
            <value>
                <fullName>FI - Finland</fullName>
            </value>
            <value>
                <fullName>FR - France</fullName>
            </value>
            <value>
                <fullName>GB - United Kingdom</fullName>
            </value>
            <value>
                <fullName>HR - Croatia</fullName>
            </value>
            <value>
                <fullName>HU - Hungary</fullName>
            </value>
            <value>
                <fullName>IE - Ireland</fullName>
            </value>
            <value>
                <fullName>IT - Italy</fullName>
            </value>
            <value>
                <fullName>LT - Lithuania</fullName>
            </value>
            <value>
                <fullName>LU - Luxembourg</fullName>
            </value>
            <value>
                <fullName>LV - Latvia</fullName>
            </value>
            <value>
                <fullName>MT - Malta</fullName>
            </value>
            <value>
                <fullName>NL - Netherlands</fullName>
            </value>
            <value>
                <fullName>NO - Norway</fullName>
            </value>
            <value>
                <fullName>PL - Poland</fullName>
            </value>
            <value>
                <fullName>PT - Portugal</fullName>
            </value>
            <value>
                <fullName>RO - Romania</fullName>
            </value>
            <value>
                <fullName>SE - Sweden</fullName>
            </value>
            <value>
                <fullName>SI - Slovenia</fullName>
            </value>
            <value>
                <fullName>SK - Slovakia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>