mabger-meter/force-app/main/default/objects/Account/fields/Customer_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Registration_Number__c</fullName>
    <defaultValue>&quot; &quot;</defaultValue>
    <description>Customer Registration Number for Europe Migration</description>
    <label>Customer Registration Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>