mabger-meter/force-app/main/default/objects/Account/fields/Customer_Service_Rep__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>CSR involved in the Account</inlineHelpText>
    <label>Customer  Service Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Account (Customer  Service Rep)</relationshipLabel>
    <relationshipName>CSR</relationshipName>
    <type>Lookup</type>
</CustomField>