mabger-meter/force-app/main/default/objects/Account/fields/customer_service_rep_name__c.field-meta.xml
<CustomField>
    <fullName>customer_service_rep_name__c</fullName>
    <formula>Customer_Service_Rep__r.FirstName + &quot; &quot; + Customer_Service_Rep__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>customer service rep name hidden</label>
    <type>Text</type>
</CustomField>